# nspm-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  encrypt.py  main.py  requirements.txt  storage.py  ui.py
src/: con.rs  cryptography.rs  lib.rs  main.rs  storage.rs  ui.rs
src/ansi/: colors.rs  constants.rs  mod.rs
