[package]
name = "nspm"
version = "0.2.0"
edition = "2024"
description = "A password manager i made for fun and learning (don't use this for real)"
license = "MIT"

[dependencies]
argon2 = "0.5.3"
fernet = "0.2.2"
base64 = "0.22.1"
rand_core = { version = "0.9", features = ["os_rng"] }
dialoguer = { version = "0.11.0" }
comfy-table = "7.1.3"
rand = { version = "0.9.0", features = ["std_rng"] }
