[package]
name = "nspm"
version = "1.0.0"
edition = "2024"
description = "A password manager i made for fun and learning (don't use this for real)"
license = "MIT"

[dependencies]
fernet = "0.2.2"
base64 = "0.22.1"
rand_core = { version = "0.9", features = ["os_rng"] }
comfy-table = "7.1.3"
rand = { version = "0.9.0", features = ["std_rng"] }
getch-rs = "0.2.0"
argon2 = { version = "0.5.3", features = ["alloc", "password-hash"] }
secrecy = "0.10.3"
